cmake_minimum_required(VERSION 3.9)
project(POO2)

set(CMAKE_CXX_STANDARD 11)

add_executable(POO2 main.cpp agent.cpp agent.h cmake-build-debug/powerups.cpp cmake-build-debug/powerups.h cmake-build-debug/CMakeFiles/terorist.cpp cmake-build-debug/CMakeFiles/terorist.h CounterTerorist.cpp CounterTerorist.h cmake-build-debug/CMakeFiles/Mercenary.cpp cmake-build-debug/CMakeFiles/Mercenary.h cmake-build-debug/CMakeFiles/map.cpp cmake-build-debug/CMakeFiles/map.h)